--- a/project/RTOS/MDK-ARM/output/PWM(Motor).build_log.htm
+++ b/project/RTOS/MDK-ARM/output/PWM(Motor).build_log.htm
@@ -27,14 +27,27 @@ Project File Date:  04/29/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'PWM(Motor)'
-".\output\PWM(Motor).axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+..\Src\main.c(567): warning:  #167-D: argument of type "void (*)()" is incompatible with parameter of type "pdTASK_CODE"
+  	 
+TaskCreate( Detect_obstacle, "obstacle", 1000, NULL, 1, NULL);
+..\Src\main.c(569): warning:  #167-D: argument of type "void (*)()" is incompatible with parameter of type "pdTASK_CODE"
+  	 
+TaskCreate( Motor_control, "motor", 1000, NULL, 3, NULL);
+..\Src\main.c(924): warning:  #1-D: last line of file ends without a newline
+  /************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****/
+..\Src\main.c: 4 warnings, 0 errors
+linking...
+Program Size: Code=17740 RO-data=500 RW-data=260 ZI-data=27836  
+FromELF: creating hex file...
+".\output\PWM(Motor).axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   C:\Users\psw75\OneDrive - 충남대학교\강의자료\2022-1학기\임베디드소프트웨어\12주차\2022_Termproject기본코드\project\RTOS\MDK-ARM\RTE
   C:\Keil_v5\ARM\PACK\Keil\STM32F4xx_DFP\2.4.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
